btsync-gui (0.8.5-1) unstable; urgency=low

  * Fixed add_folder incompatibility with btsync 1.4 (Closes #154)

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 05 Sep 2014 01:59:22 +0200

btsync-gui (0.8.4-1) unstable; urgency=low

  * Changed "synched" to "synced" to keep consistency (Closes #137)
  * Added Hungarian translation by Dávid Szilágyi (Closes #138)
  * Added experimental support for a set of dark icons for light
    themes (Closes #136)
  * Added support for new advanced configuration parameters
    of BitTorrent Sync 1.4 (Closes #146)

 -- Leo Moll <leo.moll@yeasoft.com>  Thu, 01 Sep 2014 19:15:53 +0200

btsync-gui (0.8.3-1) unstable; urgency=low

  * Made columns in "Folders" and "Devices" pane persistently sortable
  * Hide unimplemented panes "Transfers" and "History"
  * Added support for custom secrets (Closes #113)
  * Implemented support for restore modified files in read-only folder
    settings (Closes #127)
  * Added passive support for encrypted secrets (Closes #129)
  * Improved input field handling (Closes #130)
  * Localisation improvements

 -- Leo Moll <leo.moll@yeasoft.com>  Thu, 24 Apr 2014 16:35:10 +0200

btsync-gui (0.8.2-1) unstable; urgency=low

  * Added Bulgarian translation by Atanas Kovachki (Closes #121)
  * Added Polish translation by Damian Szymański (Closes #123)

 -- Leo Moll <leo.moll@yeasoft.com>  Sun, 06 Apr 2014 18:28:06 +0200

btsync-gui (0.8.1-1) unstable; urgency=low

  * Added transfer status indicator to all tabs of the main
    window except for the preferences pane (1.3 UI)
  * Added detailed API timing info to logging
  * Added default support for new advanced preferences of
    version 1.3 (Closes #119)
  * Added Czech translation by Marek Lucas (Closes #111)
  * Added Russian translation by Sergey Shlyapugin (Closes #112)

 -- Leo Moll <leo.moll@yeasoft.com>  Mon, 01 Apr 2014 19:31:29 +0200

btsync-gui (0.8.0-1) unstable; urgency=low

  * Remember column sizes (Closes #101)
  * Added I18N support (Closes #102)