@@ -1,8 +1,10 @@
 btsync-gui (0.8.5-1) unstable; urgency=low
 
   * Fixed add_folder incompatibility with btsync 1.4 (Closes #154)
+  * Fixed settings file creation when local agent not already
+    started (Closes #153)
 
- -- Leo Moll <leo.moll@yeasoft.com>  Fri, 05 Sep 2014 01:59:22 +0200
+ -- Leo Moll <leo.moll@yeasoft.com>  Fri, 05 Sep 2014 17:02:22 +0200
 
 btsync-gui (0.8.4-1) unstable; urgency=low
 
